--- a/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_output_categories.html.erb
@@ -1,72 +1,60 @@
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h4>Output Categories</h4>
-  </div>
-
-  <div class="panel-body">
-    <% @job.output_categories.each do |category| %>
+<div class='lead'>Output Categories:</div>
+<% @job.output_categories.each do |category| %>
+  <div class='row'>
+    <div class='col-md-12'>
+      <div class='status-message'><label><%= category.name.to_s.camelcase %>:</label></div>
       <div class='row'>
         <div class='col-md-12'>
-          <div class="panel panel-success">
-            <div class="panel-heading">
-              <div class='status-message'>
-                <label><%= category.name.to_s.camelcase %></label>
-              </div>
-            </div>
-
-            <div class="panel-body">
-              <% if category.serializer %>
-                <label>Serializer:</label>
-
-                <pre><code class="language-ruby">
-<%= category.serializer %>
-                </code></pre>
-              <% end %>
-
-              <% if category.nils %>
-                <label>Collect nil Output:</label>
-
-                <pre><code class="language-ruby">
-<%= category.nils %>
-                </code></pre>
-              <% end %>
-
-              <% if category.file_name %>
-                <label>File Name:</label>
-
-                <pre><code class="language-ruby">
-<%= category.file_name %>
-                </code></pre>
-              <% end %>
-
-              <% if category.format %>
-                <label>Format:</label>
-
-                <pre><code class="language-ruby">
-<%= category.format %></td>
-                </code></pre>
-
-              <% end %>
-
+          <table>
+            <% if category.serializer %>
+              <tr>
+                <td><label>Serializer:</label></td>
+                <td><%= category.serializer %></td>
+              </tr>
+            <% end %>
+            <tr>
+              <td><label>Collect nil output:</label></td>
+              <td><%= category.nils %></td>
+            </tr>
+            <% if category.file_name %>
+              <tr>
+                <td><label>File Name:</label></td>
+                <td><%= category.file_name %></td>
+              </tr>
+            <% end %>
+            <% if category.format %>
+              <tr>
+                <td><label>Format:</label></td>
+                <td><%= category.format %></td>
+              </tr>
               <% if category.format_options %>
-                <label>Format Options:</label>
-
-                <pre><code class="language-ruby">
-<%= category.format_options.ai(plain: true, ruby19_syntax: true, sort_keys: true) %>
-                </code></pre>
+                <tr>
+                  <td><label>Format Options:</label></td>
+                  <td><pre><code><%= category.format_options.ai(plain: true, ruby19_syntax: true, sort_keys: true) %></code></pre></td>
+                </tr>
               <% end %>
-
-              <% if category.columns %>
-                <label>Columns:</label>
-
-                <pre><code class="language-ruby">
-<%= category.columns %>
-                </code></pre>
+            <% end %>
+            <% if category.columns %>
+              <% first = true %>
+              <% category.columns.each do |item| %>
+                <% if first %>
+                  <tr>
+                    <td><label>Columns:</label></td>
+                    <td><%= item %></td>
+                  </tr>
+                  <% first = false %>
+                <% else %>
+                  <tr>
+                    <td></td>
+                    <td><%= item %></td>
+                  </tr>
+                <% end %>
               <% end %>
-            </div>
-          </div>
+            <% end %>
+          </table>
         </div>
       </div>
-    <% end %>
+    </div>
   </div>
-</div>
+  <br/>
+<% end %>
