--- a/app/views/rocket_job_mission_control/jobs/edit.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/edit.html.erb
@@ -32,11 +32,9 @@
                 <div class="panel-body">
                   <div class='lead'>Input Categories</div>
 
-                  <% f.fields_for :input_categories do |input_category_form| %>
-                    <%= render "input_category_fields.html", f: input_category_form, locals: { job: @job } %>
+                  <%= f.fields_for :input_categories do |i| %>
+                    <%= render "input_category_fields.html", f: i %>
                   <% end %>
-
-                  <%= link_to_add_fields "Add Input Categories", f, :input_categories, "primary" %>
                 </div>
               </div>
             </div>
@@ -46,11 +44,9 @@
                 <div class="panel-body">
                   <div class='lead'>Output Categories</div>
 
-                  <% f.fields_for :output_categories do |output_category_form| %>
-                    <%= render "output_category_fields.html", f: output_category_form, locals: { job: @job } %>
+                  <%= f.fields_for :output_categories do |o| %>
+                    <%= render "output_category_fields.html", f: o %>
                   <% end %>
-
-                  <%= link_to_add_fields "Add Output Categories", f, :output_categories, "success" %>
                 </div>
               </div>
             </div>
