--- a/app/views/rocket_job_mission_control/jobs/_input_category_fields.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_input_category_fields.html.erb
@@ -5,7 +5,7 @@
     <div class="panel-heading">
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="pull-left"><%= f.object.try(:name) %></h4>
+          <h4><%= input_category.try(:name) %></h4>
         </div>
       </div>
     </div>
