--- a/app/views/rocket_job_mission_control/jobs/edit.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/edit.html.erb
@@ -24,6 +24,34 @@
             <% end %>
           </div>
         </div>
+
+        <% if @job.class.respond_to?(:defined_input_categories) && @job.class.respond_to?(:defined_output_categories) %>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="panel panel-primary">
+                <div class="panel-body">
+                  <div class='lead'>Input Categories</div>
+
+                  <%= f.fields_for :input_categories do |i| %>
+                    <%= render "input_category_fields.html", f: i %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="panel panel-success">
+                <div class="panel-body">
+                  <div class='lead'>Output Categories</div>
+
+                  <%= f.fields_for :output_categories do |o| %>
+                    <%= render "output_category_fields.html", f: o %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
 
