--- a/app/views/rocket_job_mission_control/dirmon_entries/_input_category_fields.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_input_category_fields.html.erb
@@ -14,7 +14,7 @@
       <div class="form-group">
         <%= f.label :columns %>
         <% options = input_category ? Array(input_category["columns"]) : nil %>
-        <%= f.select(:columns, options_for_select(options, options), { include_blank: true }, { class: "selectize form-control", multiple: true }) %>
+        <%= f.select(:columns, options_for_select(options, options), { include_hidden: false }, { class: "selectize form-control", multiple: true }) %>
       </div>
 
       <div class="form-group">
