Same issue as Dirmon Entries and some cleanup

--- a/app/views/rocket_job_mission_control/dirmon_entries/_output_category_fields.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_output_category_fields.html.erb
@@ -21,7 +21,7 @@
 
       <div class="form-group">
         <%= f.label :format %>
-        <% options = extract_inclusion_values(RocketJob::Category::Output, :format, true) %>
+        <% options = extract_inclusion_values(RocketJob::Category::Output, :format) %>
         <% value = output_category.format %>
         <%= f.select(:format, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
       </div>
