--- a/app/views/rocket_job_mission_control/dirmon_entries/_form.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_form.html.erb
@@ -52,8 +52,7 @@
 
                   <div class="form-group">
                     <%= p.label property_name.to_s %>
-                    <%#= editable_field_html(@dirmon_entry.job_class, property_name, @dirmon_entry.properties[property_name], p, true) %>
-                    <%= editable_field_html(@dirmon_entry.job_class, property_name, @job.public_send(property_name), p, true) %>
+                    <%= editable_field_html(@dirmon_entry.job_class, property_name, @job.public_send(property_name), p) %>
                   </div>
                 <% end %>
               </div>
