--- a/app/views/rocket_job_mission_control/dirmon_entries/_input_category_fields.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_input_category_fields.html.erb
@@ -21,7 +21,7 @@
 
       <div class="form-group">
         <%= f.label :format %>
-        <% options = extract_inclusion_values(RocketJob::Category::Input, :format, true) %>
+        <% options = extract_inclusion_values(RocketJob::Category::Input, :format) %>
         <% value = input_category.format %>
         <%= f.select(:format, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
       </div>
@@ -34,14 +34,14 @@
 
       <div class="form-group">
         <%= f.label :mode %>
-        <% options = extract_inclusion_values(RocketJob::Category::Input, :mode, true) %>
+        <% options = extract_inclusion_values(RocketJob::Category::Input, :mode) %>
         <% value = input_category.mode %>
         <%= f.select(:mode, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
       </div>
 
       <div class="form-group">
         <%= f.label "Skip and Ignore Unknown Columns" %>
-        <% options = extract_inclusion_values(RocketJob::Category::Input, :skip_unknown, true) %>
+        <% options = extract_inclusion_values(RocketJob::Category::Input, :skip_unknown) %>
         <% value = input_category.skip_unknown %>
         <%= f.select(:skip_unknown, options, { include_blank: true, selected: value }, { class: "selectize form-control" }) %>
       </div>
